# TGF-TEB-Propagation-Geant4

./: .gitignore  CMakeLists.txt  README.md  compile_Windows.bat  compile_install.bash  compile_install_Ubuntu.bash  compile_windows.bat
AI Setup Project1/: Setup_installer.aiproj
cmake_win32/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
cmake_win32/doc/cmake/html/_static/: documentation_options.js
cmake_win32/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  break.html  build_command.html  build_name.html  cmake_host_system_information.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  ctest_start.html  ctest_submit.html  ctest_test.html  ctest_update.html  ctest_upload.html  define_property.html  else.html  elseif.html  enable_language.html  enable_testing.html  (+82 more)
cmake_win32/doc/cmake/html/cpack_gen/: archive.html  bundle.html  cygwin.html  deb.html  dmg.html  external.html  freebsd.html  ifw.html  nsis.html  nuget.html  packagemaker.html  productbuild.html  rpm.html  wix.html
cmake_win32/doc/cmake/html/envvar/: ASM_DIALECT.html  ASM_DIALECTFLAGS.html  CC.html  CFLAGS.html  CMAKE_BUILD_PARALLEL_LEVEL.html  CMAKE_CONFIG_TYPE.html  CMAKE_MSVCIDE_RUN_PATH.html  CMAKE_NO_VERBOSE.html  CMAKE_OSX_ARCHITECTURES.html  CSFLAGS.html  CTEST_INTERACTIVE_DEBUG_MODE.html  CTEST_OUTPUT_ON_FAILURE.html  CTEST_PARALLEL_LEVEL.html  CTEST_PROGRESS_OUTPUT.html  CTEST_USE_LAUNCHERS_DEFAULT.html  CUDACXX.html  CUDAFLAGS.html  CUDAHOSTCXX.html  CXX.html  CXXFLAGS.html  DASHBOARD_TEST_FROM_CTEST.html  DESTDIR.html  FC.html  FFLAGS.html  LDFLAGS.html  MACOSX_DEPLOYMENT_TARGET.html  PackageName_ROOT.html  RC.html  RCFLAGS.html  VERBOSE.html
cmake_win32/doc/cmake/html/generator/: Borland Makefiles.html  CodeBlocks.html  CodeLite.html  Eclipse CDT4.html  Green Hills MULTI.html  Kate.html  MSYS Makefiles.html  MinGW Makefiles.html  NMake Makefiles JOM.html  NMake Makefiles.html  Ninja.html  Sublime Text 2.html  Unix Makefiles.html  Visual Studio 10 2010.html  Visual Studio 11 2012.html  Visual Studio 12 2013.html  Visual Studio 14 2015.html  Visual Studio 15 2017.html  Visual Studio 16 2019.html  Visual Studio 6.html  Visual Studio 7 .NET 2003.html  Visual Studio 7.html  Visual Studio 8 2005.html  Visual Studio 9 2008.html  Watcom WMake.html  Xcode.html
cmake_win32/doc/cmake/html/manual/: ccmake.1.html  cmake-buildsystem.7.html  cmake-commands.7.html  cmake-compile-features.7.html  cmake-developer.7.html  cmake-env-variables.7.html  cmake-file-api.7.html  cmake-generator-expressions.7.html  cmake-generators.7.html  cmake-gui.1.html  cmake-language.7.html  cmake-modules.7.html  cmake-packages.7.html  cmake-policies.7.html  cmake-properties.7.html  cmake-qt.7.html  cmake-server.7.html  cmake-toolchains.7.html  cmake-variables.7.html  cmake.1.html  cpack-generators.7.html  cpack.1.html  ctest.1.html
cmake_win32/doc/cmake/html/module/: AddFileDependencies.html  AndroidTestUtilities.html  BundleUtilities.html  CMakeAddFortranSubdirectory.html  CMakeBackwardCompatibilityCXX.html  CMakeDependentOption.html  CMakeDetermineVSServicePack.html  CMakeExpandImportedTargets.html  CMakeFindDependencyMacro.html  CMakeFindFrameworks.html  CMakeFindPackageMode.html  CMakeForceCompiler.html  CMakeGraphVizOptions.html  CMakePackageConfigHelpers.html  (+241 more)
cmake_win32/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
cmake_win32/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
geant4/: geant4.sh
geant4/data/: .gitignore  download_data.sh
src/: CMakeLists.txt  tgf_propa.cc
src/include/: Analysis.hh  DetectorConstruction.hh  EarthMagField.hh  EarthMagField_IGRF.hh  EarthMagField_WMM.hh  EarthMagField_alternative.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RegionInformation.hh  RunAction.hh  SD.hh  Settings.hh  StepMax.hh  SteppingAction.hh  f77char.hh  f77cmplx.hh  f77matrx.hh  fortran.hh  geodetic_converter.hh
src/include/Bline_tracer/: G4BlineEquation.hh  G4BlineEventAction.hh  G4BlinePrimaryGeneratorAction.hh  G4BlineSteppingAction.hh  G4BlineTracer.hh  G4BlineTracerMessenger.hh
src/include/C/: coordinates_conversions.h  nrlmsise-00.h
src/include/steppers/: G4BogackiShampine23.hh  G4CashKarpRKF45.hh  G4DoLoMcPriRK34.hh  G4DormandPrince745.hh  G4DormandPrinceRK56.hh  G4DormandPrinceRK78.hh  G4NystromRK4.cc  G4NystromRK4.hh  G4TsitourasRK45.hh
src/src/: Analysis.cc  DetectorConstruction.cc  EarthMagField.cc  EarthMagField_IGRF.cc  EarthMagField_WMM.cc  EarthMagField_alternative.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RegionInformation.cc  RunAction.cc  SD.cc  Settings.cc  StepMax.cc  SteppingAction.cc
src/src/Bline_tracer/: G4BlineEquation.cc  G4BlineEventAction.cc  G4BlinePrimaryGeneratorAction.cc  G4BlineSteppingAction.cc  G4BlineTracer.cc  G4BlineTracerMessenger.cc
src/src/C/: coordinates_conversions.c  nrlmsise-00.c  nrlmsise-00_data.c  sincos.c
src/src/C/WMM/src/: GeomagnetismHeader.h  GeomagnetismLibrary.c
src/src/steppers/: G4BogackiShampine23.cc  G4CashKarpRKF45.cc  G4DoLoMcPriRK34.cc  G4DormandPrince745.cc  G4DormandPrinceRK56.cc  G4DormandPrinceRK78.cc  G4TsitourasRK45.cc
tests/: plot_t50_rd_compa.m  t50_vs_rd.eps  t50_vs_rd.fig  t50_vs_rd_different_alts.eps
(+1129 files in other folders)
